[package]
name = "r2r_transforms"
version = "0.1.0"
authors = ["Endre Erős <endre.eros@chalmersindustriteknik.se>"]
edition = "2021"
autotests = true

[profile.colcon]
inherits = "release"

[dependencies]
log = "0.4.21"
rand = "0.8.5"
env_logger = "0.11.5"
termtree = "0.4.1"
structopt = "0.3.26"
r2r = { version = "0.9.0"} #, optional = true }
nalgebra = "0.32.5"
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }

# [features]
# ros = ["dep:r2r"]

[[example]]
name = "space_tree"
path = "examples/space_tree.rs"

# [[example]]
# name = "space_tree_ros"
# path = "examples/space_tree_ros.rs"
# required-features = ["ros"]